# tiger-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/ast/: ast.hpp
include/common/: common.hpp
include/ir/: ir_generator.hpp  print.hpp  translate_exp.hpp  tree.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: parser.hpp
include/semantic/: environment.hpp  semantic_analyzer.hpp  symbol_table.hpp  types.hpp
include/translate/: escape.hpp  frame.hpp  mips_frame.hpp  temp.hpp  translate.hpp  x64_frame.hpp
src/: main.cpp
src/ast/: ast.cpp
src/ir/: ir_generator.cpp  print.cpp  tree.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/semantic/: semantic_analyzer.cpp  types.cpp
src/translate/: escape.cpp  translate.cpp  x64_frame.cpp
test/: test1.tig
tests/: escape_test.cpp  parser_test.cpp  semantic_test.cpp  tiger_test.cpp
tools/: dot_dump.cpp  syntax_highlighter.cpp  syntax_highlighter.hpp
